--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Reproducible Research: Peer Assessment 1"
-date: "August 13th, 2015 "
+author: "María Elvira Ferre Jaén (mariaelvira.ferre@um.es)"
+date: "August 12th, 2015 "
 output: 
   html_document:
     keep_md: true
